--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
         body {
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(#EB5757, #F2C94C, #219653);
+            /* background-image: linear-gradient(#EB5757, #F2C94C, #219653); */
+            background-image: url("/backround.jpg");
+            background-size: 100% 100%;
         }
     </style>
     <!--
